Добавлено контекстное меню, многооконный режим. Устранены ошибки с колёсиком мыши НАДО РЕШИТЬ ПРОБЛЕМУ С ДАННЫМИ РАНГОВ(ПЕРЕПЛЕТАЮТСЯ)

--- a/Form1.resx
+++ b/Form1.resx
@@ -123,9 +123,6 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>466, 19</value>
   </metadata>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>466, 19</value>
-  </metadata>
   <metadata name="ModBusUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>168, 17</value>
   </metadata>
@@ -144,4 +141,197 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>228</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEANjIAAAEAIADoKwAAFgAAACgAAAA2AAAAZAAAAAEAIAAAAAAAMCoAABILAAASCwAAAAAAAAAA
+        AAD/////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////v7+////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////v7+////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////7+/v////////////7+/v//////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////7+/v//////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////7+/v//////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////////////////////7+
+        /v//////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////+Pj4//////////////////+/v7/////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //8BAQH/AAAA/wAAAP8AAAD/AAAA/wAAAP8BAQH/AAAA/wAAAP8BAQH/AAAA/wAAAP8AAAD/AAAA////
+        ////////gICA/wwMDP/W1tb////////////+/v7/////////////////////////////////////////
+        //////////////7+/v///////////////////////v7+//////8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wEBAf8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA////////////FxcX/wICAv9ZWVn///////7+
+        /v//////////////////////////////////////////////////////////////////////////////
+        //////////////7+/v8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA//7+/v//////////////////////////////////////////////
+        /////////v7+////////////tbW1/wEBAf8AAAD/vr6+///////+/v7/////////////////////////
+        //////////////////////////////////////////////7+/v///////v7+////////////////////
+        /////////////////////////////////////////v7+////////////AAAA/wAAAP8AAAD/AAAA////
+        /////////v7+//////////////////////////////////7+/v//////////////////////9/f3/1RU
+        VP8AAAD/PT09//////////////////7+/v//////////////////////////////////////////////
+        /////////v7+//////////////////7+/v//////////////////////////////////////////////
+        ////////////////////////AQEB/wAAAP8AAAD/AAAA///////+/v7/////////////////////////
+        /////////////////////////////////////////////9TU1P8ODg7/AAAA/56env///////v7+////
+        ///////////////////////////////////////////////////+/v7///////7+/v/+/v7/////////
+        ////////////////////////////////////////////////////////////////////////AAAA/wAA
+        AP8AAAD/AAAA//////////////////7+/v//////////////////////////////////////////////
+        /////////v7+//39/f91dXX/AAAA/yUlJf/u7u7/////////////////////////////////////////
+        /////////////////////////v7+///////////////////////+/v7/////////////////////////
+        ////////////////////////////////////////AAAA/wAAAP8BAQH/AAAA////////////////////
+        //////////////////////////////////////////////////////////////7+/v/r6+v/Hx8f/wEB
+        Af99fX3//f39////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////AQEB/wAAAP8AAAD/AAAA////////////////////////////////////////////////////
+        /////////////////////////v7+////////////lpaW/wAAAP8TExP/2NjY////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////f39/zc3N/8AAAD/Wlpa//n5+f/////////////////////////////////+/v7/////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////////////////////
+        //////////////////////////////////////////////7+/v///////////7e3t/8AAAD/BQUF/7y8
+        vP///////////////////////////////////////v7+////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////AAAA/wAA
+        AP8AAAD/AAAA////////////////////////////////////////////////////////////////////
+        //////////////////////////////////9VVVX/AQEB/zo6Ov/z8/P///////7+/v//////////////
+        ///+/v7/////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////
+        ///////////////////////////////////////////////////////////////////9/f3///////7+
+        /v/U1NT/BwcH/wAAAP+cnJz////////////+/v7/////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////AAAA/wAAAP8AAAD/AAAA////////////////////////////////////////////////////
+        //////////////////////////////7+/v//////////////////////dXV1/wAAAP8eHh7/5+fn////
+        //////////////7+/v//////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////+/v7/4+Pj/xsbG/8AAAD/fHx8////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////////////////////
+        //////////////////////////////////////////////7+/v////////////7+/v///////////5aW
+        lv8AAAD/Dw8P/9nZ2f///////v7+///////+/v7/////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////AQEB/wAA
+        AP8AAAD/AAAA////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////+7u7v83Nzf/AAAA/1lZWf/+/v7/////////
+        /////////v7+////////////////////////////////////////////////////////////////////
+        ///////////////////+/v7/////////////////AgIC/wAAAP8AAAD/CAgI/9/f3///////////////
+        ///+/v7/////////////////////////////////////////////////////////////////////////
+        //////////////////+4uLj/CAgI/wcHB/+6urr/////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////AAAA/wAAAP8AAAD/CAgI/8XFxf//////////////////////////////////////////////
+        ///////////////////////////////////////////////////////////////////29vb/V1dX/wAA
+        AP85OTn/+fn5///////+/v7/////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////AAAA/wAAAP8BAQH/AAAA////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////1dXV/xQUFP8BAQH/mZmZ////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAA/wAAAP8AAAD/AQEB///////////////////////+/v7/////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////+/v7/3l5ef8AAAD/ISEh/+np6f//////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////AAAA/wAA
+        AP8AAAD/AAAA//7+/v//////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////v7+/+/v7/8lJSX/AQEB/3Z2
+        dv///////v7+////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA///////+/v7/////////
+        ///+/v7/////////////////////////////////////////////////////////////////////////
+        //////////////////////////////39/f+bm5v/AAAA/w4ODv/T09P/////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////AAAA/wAAAP8AAAD/AAAA///////+/v7/////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////PDw8/wAAAP9WVlb//f39////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////AAAA/wAAAP8AAAD/AQEB////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////urq6/wEBAf8AAAD/uLi4////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///+/v7///////7+/v///////////1dXV/8AAAD/NTU1//f39///////////////////////////////
+        ///+/v7/////////////////////////////////////////////////////////////////AAAA/wAA
+        AP8AAAD/AAAA////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////v7+///////+/v7//////9HR
+        0f8FBQX/AAAA/5qamv//////////////////////////////////////////////////////////////
+        ////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////+/v7///////////92dnb/AQEB/yAgIP/w8PD///////7+
+        /v////////////7+/v//////////////////////////////////////////////////////////////
+        ////////AAAA/wAAAP8AAAD/AAAA////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////v7+///////j4+P/HBwc/wAAAP95eXn////////////+/v7/////////////////////////
+        ////////////////////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////7+/v/////////////////+/v7/mJiY/wYG
+        Bv8UFBT/1dXV//////////////////7+/v//////////////////////////////////////////////
+        ////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////+/v7///////7+/v//////7+/v/zs7O/8BAQH/WFhY//7+/v///////v7+////
+        ///+/v7/////////////////////////////////////////////////////////////////AAAA/wAA
+        AP8AAAD/AAAA////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////v7+/////////////v7+////
+        /////////////7m5uf8MDAz/CgoK/7a2tv////////////7+/v//////////////////////////////
+        ////////////////////////////////////////AAAA/wAAAP8AAAD/AAAA////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////f39/9aWlr/AAAA/zQ0
+        NP/z8/P/////////////////////////////////////////////////////////////////////////
+        ////////AAAA/wAAAP8AAAD/AAAA//////////////////7+/v//////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////7+/v/Z2dn/GBgY/wUFBf+Ghob///////7+/v//////////////
+        ///////////////////////////////////////////////////+/v7/AAAA/wAAAP8AAAD/AAAA/wEB
+        Af8AAAD/AQEB/wEBAf8AAAD/AAAA/wEBAf8AAAD/AAAA/wAAAP8AAAD/AAAA////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///+/v7/fHx8/wAAAP89PT3///////////8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AQEB/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AQEB/wAAAP8BAQH/AAAA//7+/v//////////////////////////////////////////////
+        ///////////////////////////////////////////////////+/v7/8/Pz/35+fv/39/f/////////
+        //8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP///////////////////////v7+/////////////////////////////////////////////v7+////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////v7+////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////7+/v///////v7+////
+        //////////////7+/v//////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////+/v7///////7+/v//////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////7+/v///////v7+////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////v7+//////////////////////////////////7+/v////////////7+/v//////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////v7+///////+/v7/////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////7+/v////////////7+/v//////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
