--- a/NodDis.resx
+++ b/NodDis.resx
@@ -118,6 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="EN_DN_TTdis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\EN-DN-TTdis.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OTEdis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\OTEdis.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OTLdis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\OTLdis.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OTUdis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\OTUdis.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="XICdis" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\XICdis.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
