--- a/NodEn.resx
+++ b/NodEn.resx
@@ -121,6 +121,9 @@
   <data name="EN_DN_TT" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\EN-DN-TT.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ONS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ONS.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="OTE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\OTE.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
